@@ -15,8 +15,10 @@ package com.google.devtools.build.lib.packages;
 
 import com.google.common.collect.ImmutableList;
 import com.google.devtools.build.lib.cmdline.Label;
+import com.google.devtools.build.lib.cmdline.PackageIdentifier;
 import com.google.devtools.build.lib.skyframe.serialization.autocodec.SerializationConstant;
 import java.util.List;
+import java.util.Objects;
 import javax.annotation.Nullable;
 import net.starlark.java.eval.EvalException;
 import net.starlark.java.eval.Starlark;
@@ -30,40 +32,50 @@ import net.starlark.java.eval.Starlark;
  *
  * <p>All implementations of this interface are immutable.
  */
-public interface RuleVisibility {
+public abstract class RuleVisibility {
 
   /**
-   * Returns the list of labels that need to be loaded so that the visibility decision can be made
-   * during analysis time. E.g. for package group visibility, this is the list of package groups
-   * referenced. Does not include labels that have special meanings in the visibility declaration,
-   * e.g. "//visibility:*" or "//*:__pkg__".
+   * Returns the list of all labels comprising this visibility.
+   *
+   * <p>This includes labels that are not loadable, such as //visibility:public and //foo:__pkg__.
    */
-  List<Label> getDependencyLabels();
+  public abstract List<Label> getDeclaredLabels();
 
   /**
-   * Returns the list of labels used during the declaration of this visibility. These do not
-   * necessarily represent loadable labels: for example, for public or private visibilities, the
-   * special labels "//visibility:*" will be returned, and so will be the special "//*:__pkg__"
-   * labels indicating a single package.
+   * Same as {@link #getDeclaredLabels}, but excludes labels that cannot be loaded.
+   *
+   * <p>I.e., this returns the labels of the top-level {@code package_group}s that must be loaded in
+   * order to determine the complete set of packages represented by this visibility. (Additional
+   * {@code package_group}s may need to be loaded due to their {@code includes} attribute.)
    */
-  List<Label> getDeclaredLabels();
-
-  @SerializationConstant Label PUBLIC_LABEL = Label.parseCanonicalUnchecked("//visibility:public");
+  public abstract List<Label> getDependencyLabels();
 
   @SerializationConstant
-  Label PRIVATE_LABEL = Label.parseCanonicalUnchecked("//visibility:private");
+  public static final Label PUBLIC_LABEL = Label.parseCanonicalUnchecked("//visibility:public");
 
   @SerializationConstant
-  RuleVisibility PUBLIC =
+  public static final Label PRIVATE_LABEL = Label.parseCanonicalUnchecked("//visibility:private");
+
+  // Constant for memory efficiency; see b/370873477.
+  @SerializationConstant
+  public static final ImmutableList<Label> PUBLIC_DECLARED_LABELS = ImmutableList.of(PUBLIC_LABEL);
+
+  // Constant for memory efficiency; see b/370873477.
+  @SerializationConstant
+  public static final ImmutableList<Label> PRIVATE_DECLARED_LABELS =
+      ImmutableList.of(PRIVATE_LABEL);
+
+  @SerializationConstant
+  public static final RuleVisibility PUBLIC =
       new RuleVisibility() {
         @Override
-        public ImmutableList<Label> getDependencyLabels() {
-          return ImmutableList.of();
+        public ImmutableList<Label> getDeclaredLabels() {
+          return PUBLIC_DECLARED_LABELS;
         }
 
         @Override
-        public ImmutableList<Label> getDeclaredLabels() {
-          return ImmutableList.of(PUBLIC_LABEL);
+        public ImmutableList<Label> getDependencyLabels() {
+          return ImmutableList.of();
         }
 
         @Override
@@ -73,16 +85,16 @@ public interface RuleVisibility {
       };
 
   @SerializationConstant
-  RuleVisibility PRIVATE =
+  public static final RuleVisibility PRIVATE =
       new RuleVisibility() {
         @Override
-        public ImmutableList<Label> getDependencyLabels() {
-          return ImmutableList.of();
+        public ImmutableList<Label> getDeclaredLabels() {
+          return PRIVATE_DECLARED_LABELS;
         }
 
         @Override
-        public ImmutableList<Label> getDeclaredLabels() {
-          return ImmutableList.of(PRIVATE_LABEL);
+        public ImmutableList<Label> getDependencyLabels() {
+          return ImmutableList.of();
         }
 
         @Override
@@ -93,14 +105,15 @@ public interface RuleVisibility {
 
   /** Validates and parses the given labels into a {@link RuleVisibility}. */
   static RuleVisibility parse(List<Label> labels) throws EvalException {
-    validate(labels);
-    return parseUnchecked(labels);
+    return parseUnchecked(validateAndSimplify(labels));
   }
 
   /**
-   * Same as {@link #parse} except does not perform validation checks.
+   * Same as {@link #parse} except does not perform validation checks or public/private
+   * simplification.
    *
-   * <p>Use only after the given labels have been {@linkplain #validate validated}.
+   * <p>Use only after the given labels have been {@linkplain #validateAndSimplify validated and
+   * simplified}.
    */
   static RuleVisibility parseUnchecked(List<Label> labels) {
     RuleVisibility result = parseIfConstant(labels);
@@ -114,14 +127,15 @@ public interface RuleVisibility {
    * If the given list of labels represents a constant {@link RuleVisibility} ({@link #PUBLIC} or
    * {@link #PRIVATE}), returns that visibility instance, otherwise returns {@code null}.
    *
-   * <p>Use only after the given labels have been {@linkplain #validate validated}.
+   * <p>Use only after the given labels have been {@linkplain #validateAndSimplify validated and
+   * simplified}.
    */
   @Nullable
   static RuleVisibility parseIfConstant(List<Label> labels) {
     if (labels.size() != 1) {
       return null;
     }
-    Label label = labels.get(0);
+    Label label = labels.getFirst();
     if (label.equals(PUBLIC_LABEL)) {
       return PUBLIC;
     }
@@ -131,25 +145,121 @@ public interface RuleVisibility {
     return null;
   }
 
-  static void validate(List<Label> labels) throws EvalException {
+  /**
+   * Throws if the label is in the special {@code //visibility} package but is neither {@code
+   * //visibility:__pkg__} nor {@code //visibility:__subpackages__}.
+   *
+   * <p>The caller is presumed to have already handled the cases where it is {@code
+   * //visibility:public} or {@code //visibility:private}. If those labels make it to this method it
+   * will throw.
+   *
+   * <p>{@code //visibility:__pkg__} and {@code //visibility:__subpackages__} are only useful in the
+   * rare case that there exists a literal {@code //visibility} package in the build. It is
+   * disallowed to refer to any package groups declared in {@code //visibility}. This restriction
+   * lets us presume that any label in {@code //visibility} besides these four cases is an
+   * accidental misspelling.
+   */
+  private static void checkForVisibilityMisspelling(Label label) throws EvalException {
+    if (label.getPackageIdentifier().equals(PUBLIC_LABEL.getPackageIdentifier())
+        && PackageSpecification.fromLabel(label) == null) {
+      // Suggest just public/private, as that's way more common than //visibility:__pkg__ or
+      // //visibility:__subpackages__.
+      throw Starlark.errorf(
+          "Invalid visibility label '%s'; did you mean //visibility:public or"
+              + " //visibility:private?",
+          label);
+    }
+  }
+
+  /**
+   * Validates visibility labels, simplifies a list containing "//visibility:public" to
+   * ["//visibility:public"], drops "//visibility:private" if it occurs with other labels, and
+   * canonicalizes an empty list to ["//visibility:private"].
+   *
+   * @param labels list of visibility labels; not modified even if mutable.
+   * @return either {@code labels} unmodified if it does not require simplification, or a new
+   *     simplified list of visibility labels.
+   */
+  // TODO(arostovtsev): we ought to uniquify the labels, matching the behavior of {@link
+  // #concatWithElement}; note that this would be an incompatible change (affects query output).
+  static List<Label> validateAndSimplify(List<Label> labels) throws EvalException {
+    boolean hasPublicLabel = false;
+    int numPrivateLabels = 0;
     for (Label label : labels) {
-      if (label.equals(PUBLIC_LABEL) || label.equals(PRIVATE_LABEL)) {
-        if (labels.size() > 1) {
-          throw Starlark.errorf(
-              "//visibility:public and //visibility:private cannot be used in combination with"
-                  + " other labels");
-        }
-      } else if (label.getPackageIdentifier().equals(PUBLIC_LABEL.getPackageIdentifier())
-          && PackageSpecification.fromLabel(label) == null) {
-        // In other words, if the label is in //visibility and is not //visibility:public,
-        // //visibility:private, or (for the unusual case where //visibility
-        // exists as a package) //visibility:__pkg__ or //visibility:__subpackages__
-        throw Starlark.errorf(
-            "Invalid visibility label '%s'; did you mean //visibility:public or"
-                + " //visibility:private?",
-            label);
+      if (label.equals(PUBLIC_LABEL)) {
+        // Do not short-circuit here; we want to validate all the labels.
+        hasPublicLabel = true;
+      } else if (label.equals(PRIVATE_LABEL)) {
+        numPrivateLabels++;
+      } else {
+        checkForVisibilityMisspelling(label);
+      }
+    }
+    if (hasPublicLabel) {
+      return PUBLIC_DECLARED_LABELS;
+    }
+    if (numPrivateLabels == labels.size()) {
+      return PRIVATE_DECLARED_LABELS;
+    }
+    if (numPrivateLabels == 0) {
+      return labels;
+    }
+    ImmutableList.Builder<Label> withoutPrivateLabels =
+        ImmutableList.builderWithExpectedSize(labels.size() - numPrivateLabels);
+    for (Label label : labels) {
+      if (!label.equals(PRIVATE_LABEL)) {
+        withoutPrivateLabels.add(label);
+      }
+    }
+    return withoutPrivateLabels.build();
+  }
+
+  /**
+   * Returns a {@code RuleVisibility} representing the logical result of concatenating this
+   * visibility's label list with a singleton list containing the given package.
+   *
+   * <p>Public and private visibilities are normalized as in {@link #validateAndSimplify}. In
+   * addition, the new item is not concatenated if it is already present as an item in this
+   * visibility's list.
+   */
+  RuleVisibility concatWithPackage(PackageIdentifier packageIdentifier) {
+    Label pkgItem = Label.createUnvalidated(packageIdentifier, "__pkg__");
+
+    if (this.equals(RuleVisibility.PRIVATE)) {
+      // Left-side private is dropped.
+      return parseUnchecked(ImmutableList.of(pkgItem));
+    } else if (this.equals(RuleVisibility.PUBLIC)) {
+      // Public is idempotent.
+      return RuleVisibility.PUBLIC;
+    } else {
+      List<Label> items = getDeclaredLabels();
+      if (items.contains(pkgItem)) {
+        return this;
+      } else {
+        ImmutableList.Builder<Label> newItems = new ImmutableList.Builder<>();
+        newItems.addAll(items);
+        newItems.add(pkgItem);
+        return parseUnchecked(newItems.build());
       }
     }
   }
-}
 
+  @Override
+  public boolean equals(Object other) {
+    if (this == other) {
+      return true;
+    } else if (!(other instanceof RuleVisibility)) {
+      return false;
+    } else {
+      // PackageGroupsRuleVisibility is not allowed to contain the special public/private items, so
+      // we don't have to worry about that overlapping with our singleton PUBLIC/PRIVATE instances
+      // here.
+      return getDeclaredLabels().equals(((RuleVisibility) other).getDeclaredLabels());
+    }
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(getClass(), getDeclaredLabels());
+  }
+}
